# Benny

./: .gitignore  CHANGELOG.md  CLI_README.md  COMPLETION_SUMMARY.md  Cargo.toml  DOCKER_TOPOLOGY_TESTING.md  Dockerfile  Dockerfile.server  INPUT_SERVER_README.md  MULTI_CORE_OPTIMIZATION.md  README.md  SECURITY.md  SERIALIZATION.md  TOPOLOGY_SUMMARY.md  hebbian_config.toml  my_network.json  online_demo.toml  repo.md  test_input_server.sh  test_topology.py  trained_xor.json  trained_xor_csv.json  xor_config.toml  xor_data.csv  xor_data.json
.openhands/microagents/: repo.md
docker/: README.md  neural-topology.sh
docker/config/: default.toml
docker/topologies/: README-custom-6node.md  custom-6node.yml  linear.yml  mesh.yml  ring.yml  star.yml
docs/: DISTRIBUTED_NETWORKING.md  server_mode.md
examples/: benchmark_parallel.rs  distributed_network.rs  flexible_architecture.rs  hebbian_learning.rs  hebbian_modes_demo.rs  input_size_test.rs  io_interface_example.rs  multi_core_performance.rs  network_composition.rs  network_serialization.rs  neural_network_server.rs  neural_network_with_output.rs  nnp_io_interface_example.rs  online_learning.rs  secure_distributed_network.rs  server_example.md  simple_example.rs  simple_hebbian.rs  simple_io_test.rs  simple_neural_network.rs  simple_output_test.rs  test_output_server.rs
src/: cli.rs  distributed_network.rs  input_server.rs  io_interface.rs  lib.rs  main.rs  main_old.rs  network_composer.rs  neural_network.rs  output_server.rs  runner.rs  secure_network.rs  server.rs
static/: index.html  topology_monitor.html
