[package]
name = "neural_network"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
byteorder = "1.4"
crc32fast = "1.3"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
x509-parser = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "simple_example"
path = "examples/simple_example.rs"

[[example]]
name = "flexible_architecture"
path = "examples/flexible_architecture.rs"

[[example]]
name = "multi_core_performance"
path = "examples/multi_core_performance.rs"

[[example]]
name = "benchmark_parallel"
path = "examples/benchmark_parallel.rs"

[[example]]
name = "distributed_network"
path = "examples/distributed_network.rs"

[[example]]
name = "secure_distributed_network"
path = "examples/secure_distributed_network.rs"

[[example]]
name = "simple_neural_network"
path = "examples/simple_neural_network.rs"

[[example]]
name = "online_learning"
path = "examples/online_learning.rs"

[[example]]
name = "network_serialization"
path = "examples/network_serialization.rs"
